unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Usage_of_Medical_Device__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Usage_of_Medical_Device__c</fullName>
        <description>Usage of the medical device</description>
        <inlineHelpText>Usage of the medical device</inlineHelpText>
        <label>Usage of the medical device</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initial use</fullName>
                </value>
                <value>
                    <fullName>Reuse of a single use medical device</fullName>
                </value>
                <value>
                    <fullName>Reuse of a reusable medical device</fullName>
                </value>
                <value>
                    <fullName>Re-serviced/refurbished</fullName>
                </value>
                <value>
                    <fullName>Other (please specify)</fullName>
                </value>
                <value>
                    <fullName>Problem noted prior use</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>