unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__User_facility_number__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__User_facility_number__c</fullName>
        <label>User facility number</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>