unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__User_Facility_Report_Reference__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__User_Facility_Report_Reference__c</fullName>
        <description>User facility report reference number</description>
        <inlineHelpText>User facility report reference number</inlineHelpText>
        <label>User facility report reference number</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>