unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Version__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Version__c</fullName>
        <label>Version</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>