unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Whether_Manufacturer_Aware__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Whether_Manufacturer_Aware__c</fullName>
        <description>Is the manufacturer aware of similar incidents with this type of medical device with a similar root cause?</description>
        <inlineHelpText>Is the manufacturer aware of similar incidents with this type of medical device with a similar root cause?</inlineHelpText>
        <label>Similar incidents with this device type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>