unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__XML_Created_Date_Time__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__XML_Created_Date_Time__c</fullName>
        <label>XML Created Date/Time</label>
        <type>DateTime</type>
    </CustomField>