unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/validationRules/CMPL123CME__Expiry_Date_Device_MFR_Date.validationRule-meta.xml
<ValidationRule>
        <fullName>CMPL123CME__Expiry_Date_Device_MFR_Date</fullName>
        <active>true</active>
        <errorConditionFormula>OR((CMPL123CME__Device_Mfr_Date__c &gt;  CMPL123CME__Device_Expiry_Date__c),(CMPL123CME__Device_Mfr_Date__c =  CMPL123CME__Device_Expiry_Date__c))</errorConditionFormula>
        <errorDisplayField>CMPL123CME__Device_Expiry_Date__c</errorDisplayField>
        <errorMessage>This date cannot be on or before Device Mfr Date</errorMessage>
    </ValidationRule>