unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/validationRules/CMPL123CME__MEDDEV_Form_Language_Validation.validationRule-meta.xml
<ValidationRule>
        <fullName>CMPL123CME__MEDDEV_Form_Language_Validation</fullName>
        <active>true</active>
        <description>MEDDEV Form Language Validation, should accept only 'en', 'de' or blank values.</description>
        <errorConditionFormula>IF(OR(CMPL123CME__Form_Language__c = 'en',CMPL123CME__Form_Language__c = 'de',ISBLANK(CMPL123CME__Form_Language__c)),false,true)</errorConditionFormula>
        <errorDisplayField>CMPL123CME__Form_Language__c</errorDisplayField>
        <errorMessage>Permitted values: "en", "de", or blank.</errorMessage>
    </ValidationRule>