unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/validationRules/CMPL123CME__No_of_medi_devices_involved.validationRule-meta.xml
<ValidationRule>
        <fullName>CMPL123CME__No_of_medi_devices_involved</fullName>
        <active>true</active>
        <description>No of medi devices involved field only permits numbers.</description>
        <errorConditionFormula>NOT( REGEX( CMPL123CME__Numberof_Medical_Devices_Involved__c ,"[0-9]*") )</errorConditionFormula>
        <errorDisplayField>CMPL123CME__Numberof_Medical_Devices_Involved__c</errorDisplayField>
        <errorMessage>Only numbers permitted in this field.</errorMessage>
    </ValidationRule>