unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/validationRules/CMPL123CME__Number_of_patients_involved.validationRule-meta.xml
<ValidationRule>
        <fullName>CMPL123CME__Number_of_patients_involved</fullName>
        <active>true</active>
        <description>Number of patients involved field only permits numbers.</description>
        <errorConditionFormula>NOT( REGEX( CMPL123CME__Numberof_patients_involved__c ,"[0-9]*") )</errorConditionFormula>
        <errorDisplayField>CMPL123CME__Numberof_patients_involved__c</errorDisplayField>
        <errorMessage>Only numbers permitted in this field.</errorMessage>
    </ValidationRule>