unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/validationRules/CMPL123CME__Required_field_Initial_CAPAS_by_MFG.validationRule-meta.xml
<ValidationRule>
        <fullName>CMPL123CME__Required_field_Initial_CAPAS_by_MFG</fullName>
        <active>true</active>
        <description>Required field value - Initial CAPAs implemented by the mfg.</description>
        <errorConditionFormula>if( (ISPICKVAL(CMPL123CME__Type_of_Report__c,'Initial report') || ISPICKVAL(CMPL123CME__Type_of_Report__c,'Follow-up report')) &amp;&amp; (CMPL123CME__Initial_Corrective_Preventive_Actions__c = null || CMPL123CME__Initial_Corrective_Preventive_Actions__c = ''),true,false)</errorConditionFormula>
        <errorDisplayField>CMPL123CME__Initial_Corrective_Preventive_Actions__c</errorDisplayField>
        <errorMessage>This field value is required for this report type</errorMessage>
    </ValidationRule>