unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/validationRules/CMPL123CME__Required_field_Manuf_Device_analy_result.validationRule-meta.xml
<ValidationRule>
        <fullName>CMPL123CME__Required_field_Manuf_Device_analy_result</fullName>
        <active>true</active>
        <description>Required field Manufacturer Device analysis results</description>
        <errorConditionFormula>if((ISPICKVAL( CMPL123CME__Type_of_Report__c ,'Combined initial and final report') || ISPICKVAL( CMPL123CME__Type_of_Report__c ,'Final report')) &amp;&amp; (CMPL123CME__Manufacturer_Device_Analysis_Results__c = null || CMPL123CME__Manufacturer_Device_Analysis_Results__c = ''),true,false)</errorConditionFormula>
        <errorDisplayField>CMPL123CME__Manufacturer_Device_Analysis_Results__c</errorDisplayField>
        <errorMessage>This field value cannot be blank for this report type</errorMessage>
    </ValidationRule>