unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/validationRules/CMPL123CME__Required_field_Manuf_Prelimnary_analysis.validationRule-meta.xml
<ValidationRule>
        <fullName>CMPL123CME__Required_field_Manuf_Prelimnary_analysis</fullName>
        <active>true</active>
        <description>Required field Manufacturer Prelimnary analysis</description>
        <errorConditionFormula>if( (ISPICKVAL(CMPL123CME__Type_of_Report__c, 'Initial report') || ISPICKVAL(CMPL123CME__Type_of_Report__c, 'Follow-up report')) &amp;&amp; (CMPL123CME__Manufacturer_Preliminary_Analysis__c = null || CMPL123CME__Manufacturer_Preliminary_Analysis__c = ''),true,false)</errorConditionFormula>
        <errorDisplayField>CMPL123CME__Manufacturer_Preliminary_Analysis__c</errorDisplayField>
        <errorMessage>This field value cannot be blank for this report type</errorMessage>
    </ValidationRule>