unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/validationRules/CMPL123CME__Required_field_RC_CA_PA_FSCA.validationRule-meta.xml
<ValidationRule>
        <fullName>CMPL123CME__Required_field_RC_CA_PA_FSCA</fullName>
        <active>true</active>
        <description>Required field RC/CA/PA/FSCA</description>
        <errorConditionFormula>if((ISPICKVAL( CMPL123CME__Type_of_Report__c ,'Combined initial and final report') || ISPICKVAL( CMPL123CME__Type_of_Report__c ,'Final report')) &amp;&amp; (CMPL123CME__Manufacturer_Remedial_Action__c = null || CMPL123CME__Manufacturer_Remedial_Action__c = ''),true,false)</errorConditionFormula>
        <errorDisplayField>CMPL123CME__Manufacturer_Remedial_Action__c</errorDisplayField>
        <errorMessage>This field value cannot be blank for this report type</errorMessage>
    </ValidationRule>