unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/validationRules/CMPL123CME__Required_field_Ref_Assign_by_NCA.validationRule-meta.xml
<ValidationRule>
        <fullName>CMPL123CME__Required_field_Ref_Assign_by_NCA</fullName>
        <active>true</active>
        <description>Required field Reference Number Assigned by NCA</description>
        <errorConditionFormula>if( (ISPICKVAL(CMPL123CME__Type_of_Report__c, 'Follow-up report') || ISPICKVAL(CMPL123CME__Type_of_Report__c, 'Final report')) &amp;&amp;(CMPL123CME__NCA_Reference_Number__c = null || CMPL123CME__NCA_Reference_Number__c  = ''),true,false)</errorConditionFormula>
        <errorDisplayField>CMPL123CME__NCA_Reference_Number__c</errorDisplayField>
        <errorMessage>This field value cannot be balnk for this report type</errorMessage>
    </ValidationRule>