unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/validationRules/CMPL123CME__Required_field_Similar_incidents.validationRule-meta.xml
<ValidationRule>
        <fullName>CMPL123CME__Required_field_Similar_incidents</fullName>
        <active>true</active>
        <description>Required field Similar incidents with this device type</description>
        <errorConditionFormula>if((ISPICKVAL( CMPL123CME__Type_of_Report__c ,'Combined initial and final report') || ISPICKVAL( CMPL123CME__Type_of_Report__c ,'Final report')) &amp;&amp; (ISPICKVAL(CMPL123CME__Whether_Manufacturer_Aware__c,'' )),true,false)</errorConditionFormula>
        <errorDisplayField>CMPL123CME__Whether_Manufacturer_Aware__c</errorDisplayField>
        <errorMessage>Please choose the appropriate field value</errorMessage>
    </ValidationRule>