unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/listViews/CMPL123CME__All.listView-meta.xml
<ListView>
        <fullName>CMPL123CME__All</fullName>
        <columns>NAME</columns>
        <columns>CMPL123CME__Recipient_Name_of_NCA__c</columns>
        <columns>CMPL123CME__Report_Date__c</columns>
        <columns>CMPL123CME__Type_of_Report__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </ListView>